--- a/packages/app/tsconfig.json
+++ b/packages/app/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "extends": "@quasar/app-vite/tsconfig-preset",
   "compilerOptions": {
-    "baseUrl": "."
+    "baseUrl": "../web-target"
   },
   "exclude": [
     "./dist",
